llvm-gcc-4.2-2.9/gcc/testsuite/gcc.apple/altivec-20.c
/* { dg-do compile { target powerpc*-*-* } } */
/* { dg-options "-maltivec -faltivec" } */

#define vector __attribute__((vector_size(16)))

vector long long vbl;	/* { dg-error "use of 'long long' in AltiVec types is invalid" } */

